[ + ] Added joysticks and gamepads support.
[ - ] Some old stuff (like plugins for browsers) was dropped off.
[ - ] No editors and almost no 3D in this version also no third-party plugins. Functionallity will start to return in nearest next releases.
[ - ] ICF_BLOCK_WINKEYS flag from method Configure of IInput interface.

And much much more!

Detailed description for this release could be found in russian part of change log in Beta 3 section.

===============================================================================

Below goes changes for previous pre GitHub releases. All in russian.

===============================================================================

[ * ]	- исправлено/улучшено
[!*!]	- критический bugfix или масштабное изменение
[ + ]	- добавлено
[!+!]	- серьезное добавление
[ - ]	- убрано
(WinXP) - у изменения может быть указана платформа, если оно повлияло только на конкретную систему
#	- означает, что пункт не доделан или не протестирован и к использованию не пригоден
*	- означает, что пункт еще не был закоммичен

===============================================================================

Beta 3 ( отменен )

-----------------------

#[!+!] Добавление платформонезависимой и рендеронезависимой абстракций над API операционной системы и рендера соответственно. Интерфейс ICoreRenderer и интерфейсы спутники.
#[!+!] Плагин DNetwork, позволяет организовать сеть на основе протоколов TCP/IP и UDP/IP. Возможны как локальные соединения, так и интернет через сервис DGLE2 Arena.
#[!+!] Пример сетевой игры DAero. Поддержка игры до 6-и человек по локальной сети или интернету.
[ + ] Метод GetUnknownEventType интерфейса IBaseEvent и метод CastEvent интерфейса IEngineCore. Эти методы позволяют плагинами или пользователям регистрировать и отлавливать свои кастомные события.
[ + ] Метод GetUnknownType интерфейса IEngineCore. Позволяет узнавать типы кастомных пользовательских объектов.