@@ -121,72 +121,6 @@ HRESULT DGLE2_API CBitmapFont::Draw3D(const char *pcTxt)
 	return S_OK;
 }
 
-HRESULT DGLE2_API CBitmapFont::Draw2DRect(const TRectF &stRect, const char *pcTxt, const TColor4 &stColor)
-{
-	std::string txt(pcTxt), word, out;
-
-	uint width, height;
-	GetTextDimensions(txt.c_str(), width, height);
-
-	float y = stRect.y;
-
-	if (width > stRect.width && txt.find(" ") != std::string::npos)
-	{
-		while (!txt.empty())
-		{
-			word.clear();
-			std::string::size_type pos = txt.find_first_of(" ");
-
-			if (pos == std::string::npos)
-			{
-				word = txt;
-				txt.clear();
-			}
-			else
-				word = txt.substr(0, pos + 1);
-
-			GetTextDimensions((out + word).c_str(), width, height);
-
-			if (width > stRect.width)
-			{
-				if (out.empty())
-				{
-					word.clear();
-					break;
-				}
-
-				out.erase(out.end() - 1);
-
-				if (y - stRect.y + height > stRect.height)
-				{
-					word.clear();
-					break;
-				}
-
-				Draw2D(stRect.x, y, out.c_str(), stColor, 0.f, false);
-				y += height;
-								
-				out.clear();
-			}
-			else
-			{
-				txt.erase(0, pos + 1);
-				out.append(word);
-			}
-		}
-
-		if (!word.empty())
-			Draw2D(stRect.x, y, word.c_str(), stColor, 0.f, false);
-	}
-	else
-		if (width < stRect.width)
-			Draw2D(stRect.x, stRect.y, txt.c_str(), stColor, 0.f, false);
-		else
-			return S_FALSE;
-
-	return S_OK;
-}
-
 HRESULT DGLE2_API CBitmapFont::Draw2DSimple(int iX, int iY, const char *pcTxt, const TColor4 &stColor)
 {
 	return Draw2D((float)iX, (float)iY, pcTxt, stColor, 0.f, false);
